--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -32,7 +32,7 @@ total of 17,568 observations in this dataset.
 #### **Loading and preprocessing the data**
 
 ##### 1. Load the data (i.e. read.csv())
-```{r, echo=TRUE}
+```{r loadData, echo=TRUE}
 if (!file.exists("activity.csv")) {
     unzip("activity.zip")
 }
@@ -41,7 +41,7 @@ activity1 <- read.csv("activity.csv", header=TRUE, sep=",", na.strings="NA")
 ```
 
 ##### 2. Process/transform the data
-```{r, echo=TRUE}
+```{r processData, echo=TRUE}
 activity1$date <- as.Date(as.character(activity1$date), "%Y-%m-%d")
 ```  
 
@@ -49,19 +49,19 @@ activity1$date <- as.Date(as.character(activity1$date), "%Y-%m-%d")
 #### **What is the mean total number of steps taken per day?**
 
 ##### 1. Calculate the total number of steps taken per day
-```{r, echo=TRUE}
+```{r totStepsByDay, echo=TRUE}
 totByDay1 <- aggregate(steps~date, data=activity1, FUN=sum)
 ```  
 
 #### 2. Make a histogram of the total number of steps taken each day
-```{r, echo=TRUE}
+```{r plot1, echo=TRUE}
 hist(totByDay1$steps, xlab="Total number of steps", 
      main="Total number of steps taken each day", col="red"
      )
 ```  
 
 #### 3. Calculate and report the mean and median of the total number of steps taken per day
-```{r, echo=TRUE}
+```{r meanMedian1, echo=TRUE}
 activity1.mean = mean(totByDay1$steps)
 activity1.median = median(totByDay1$steps)
 ```
@@ -76,7 +76,7 @@ Median of total number of steps taken per day.
 #### **What is the average daily activity pattern?**
 
 ##### 1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
-```{r, echo=TRUE}
+```{r plot2, echo=TRUE}
 avgByInterval1 <- aggregate(steps~interval, data=activity1, FUN=mean)
 
 with(avgByInterval1, 
@@ -88,7 +88,7 @@ with(avgByInterval1,
 ```
 
 ##### 2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
-```{r, echo=TRUE}
+```{r maxSteps, echo=TRUE}
 maxInterval <- avgByInterval1[which.max(avgByInterval1$steps), 1]
 maxSteps <- avgByInterval1[which.max(avgByInterval1$steps), 2]
 ```
@@ -99,21 +99,20 @@ maxSteps <- avgByInterval1[which.max(avgByInterval1$steps), 2]
 #### **Imputing missing values**
 
 ##### 1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
-```{r, echo=TRUE}
+```{r missingValues, echo=TRUE}
 missingVal <- sum(is.na(activity1$steps))
 ```
 
 **Total Missing Values = `r missingVal`**  
 
 ##### 2. Fill the missing values (NA) with the mean of that 5 minute interval
-```{r, echo=TRUE}
+```{r imputeData, echo=TRUE}
 library(plyr)
-
 impute.mean <- function(x) replace(x, is.na(x), mean(x, na.rm = TRUE))
 ```
 
 ##### 3. Create a new dataset that is equal to the original dataset but with the missing data filled in
-```{r, echo=TRUE}
+```{r newDataSet, echo=TRUE}
 activity2 <- ddply(activity1, ~ interval, transform, steps = impute.mean(steps))
 
 # Format the date field
@@ -124,7 +123,7 @@ activity2  <- arrange(activity2, date)
 ```
 
 ##### 4. Make a histogram of the total number of steps taken each day and calculate and report the mean and median of the total number of steps taken per day
-```{r, echo=TRUE}
+```{r plot3, echo=TRUE}
 # Calculate the total number of steps taken per day
 totByDay2 <- aggregate(steps~date, data=activity2, FUN=sum)
 
@@ -145,7 +144,7 @@ total number of steps taken are same.
 
 #### **Are there differences in activity patterns between weekdays and weekends?**
 ##### 1. Create a new factor variable in the dataset with two levels: 'weekday' and 'weekend' indicating whether a given date is a weekday or weekend day
-```{r, echo=TRUE}
+```{r addColumn, echo=TRUE}
 weekday = c("Monday", "Tuesday", "Wednesday", "Thursday", "Friday")
 
 activity2$day <- factor((weekdays(activity2$date) %in% weekday), 
@@ -155,7 +154,7 @@ activity2$day <- factor((weekdays(activity2$date) %in% weekday),
 ```
 
 ##### 2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis).
-```{r, echo=TRUE}
+```{r plot4, echo=TRUE}
 library(lattice)
 
 xyplot(steps~interval | as.factor(day), data=activity2, layout=c(1,2), 
